--- a/Frame/Layout/1_Navigation/mainnav.html
+++ b/Frame/Layout/1_Navigation/mainnav.html
@@ -7,7 +7,7 @@
     <section class="collapse navbar-collapse" id="navbar">
         <ul class="nav navbar-nav">
             <!--<a href="https://www.ninenein.com/NN-Online">NN-Online</a>-->
-            <li class="dropdown">
+            <li class="dropdown tc">
                 <div class="btn btn-shoppe dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> <span>
                     <svg width="25px" height="25px" class="blog-vect icon" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">   
                     <path fill="#999999" d="M204.055 213.905q-18.12-5.28-34.61-9a145.92 145.92 0 0 1-6.78-44.33c0-65.61 42.17-118.8 94.19-118.8 52.02 0 94.15 53.14 94.15 118.76a146.3 146.3 0 0 1-6.16 42.32q-20.52 4.3-43.72 11.05c-22 6.42-39.79 12.78-48.56 16.05-8.72-3.27-26.51-9.63-48.51-16.05zm-127.95 84.94a55.16 55.16 0 1 0 55.16 55.15 55.16 55.16 0 0 0-55.16-55.15zm359.79 0a55.16 55.16 0 1 0 55.16 55.15 55.16 55.16 0 0 0-55.15-55.15zm-71.15 55.15a71.24 71.24 0 0 1 42.26-65v-77.55c-64.49 0-154.44 35.64-154.44 35.64s-89.95-35.64-154.44-35.64v74.92a71.14 71.14 0 0 1 0 135.28v7c64.49 0 154.44 41.58 154.44 41.58s89.99-41.55 154.44-41.55v-9.68a71.24 71.24 0 0 1-42.26-65z"/></svg></span></div>
@@ -15,44 +15,67 @@
                     <form class="tc">
                         <li class="dropdown-submenu"> <a tabindex="-1" href="#">Greying</a>
                             <ul class="dropdown-menu">
-                                <li><a href="https://9neinsg.github.io/NineNein/B-Topic/GreyingErrorBlog">GEBLOG</a></li>
+                                <li role="separator" class="divider"></li>
+                                <li class="tc"><a href="https://9neinsg.github.io/NineNein/B-Topic/GreyingErrorBlog">GEBLOG</a></li>
+                                <li role="separator" class="divider header"></li>
                                 <li class="dropdown-submenu"> <a href="#">NatSoc..</a>
                                     <ul class="dropdown-menu dropdown-menu-right">
-                                        <li><a href="https://9neinsg.github.io/NineNein/B-Topic/NatSoc/books">Books</a></li>
-                                        <li><a href="https://9neinsg.github.io/NineNein/B-Topic/NatSoc/saints">Saints</a></li>
-                                        <li><a href="https://9neinsg.github.io/NineNein/B-Topic/NatSoc/music">Music</a></li>
-                                        <li><a href="https://9neinsg.github.io/NineNein/B-Topic/NatSoc/video">Video</a></li>
-                                        <li><a href="https://9neinsg.github.io/NineNein/B-Topic/NatSoc/arcade">Arcade</a></li>
-                                        <li><a href="https://9neinsg.github.io/NineNein/B-Topic/NatSoc/Inspiration">Movies</a></li>
+                                        <li role="separator" class="divider2 tc"></li>
+                                        <li class="tc"><span>Archive</span></li>
+                                        <li role="separator" class="divider2 tc"></li>
+                                        <li role="separator" class="divider"></li>
+                                        <li class="icon9add icon9-book tc"><a href="https://9neinsg.github.io/NineNein/B-Topic/NatSoc/books">Books</a></li>
+                                        <li class="icon9add icon9-lightning tc"><a href="https://9neinsg.github.io/NineNein/B-Topic/NatSoc/saints">Saints</a></li>
+                                        <li class="icon9add icon9-equalizer tc"><a href="https://9neinsg.github.io/NineNein/B-Topic/NatSoc/music">Music</a></li>
+                                        <li class="icon9add icon9-tv tc"><a href="https://9neinsg.github.io/NineNein/B-Topic/NatSoc/video">Video</a></li>
+                                        <li class="icon9add icon9-controllersnes tc"><a href="https://9neinsg.github.io/NineNein/B-Topic/NatSoc/arcade">Game</a></li>
+                                        <li class="icon9add icon9-film tc"><a href="https://9neinsg.github.io/NineNein/B-Topic/NatSoc/inspiration">Movie</a></li>
+                                        <li role="separator" class="divider"></li>
                                     </ul></li>
-                                <li class="dropdown-submenu"> <a href="#">Tech..</a>
+                                <li role="separator" class="divider"></li>
+                                <li class="dropdown-submenu"> <a href="#">Tech</a>
                                     <ul class="dropdown-menu">
-                                        <li><a href="https://9neinsg.github.io/NineNein/B-Topic/Tech/SoftWare">SoftWare</a></li>
-                                        <li><a href="https://9neinsg.github.io/NineNein/B-Topic/Tech/HardWare">HardWare</a></li>
-                                        <li><a href="https://9neinsg.github.io/NineNein/B-Topic/Tech/CryptoTalk">Crypto</a></li>
+                                        <li class="tc"><span class="tc">Recs</span></li>
+                                        <li role="separator" class="divider2 tc"></li>
+                                        <li role="separator" class="divider"></li>
+                                        <li class="icon9add icon9-paperclip tc"><a href="https://9neinsg.github.io/NineNein/B-Topic/Tech/SoftWare">SoftWare</a></li>
+                                        <li class="icon9add icon9-paperclip tc"><a href="https://9neinsg.github.io/NineNein/B-Topic/Tech/HardWare">HardWare</a></li>
+                                        <li class="icon9add icon9-bitcoin tc"><a href="https://9neinsg.github.io/NineNein/B-Topic/Tech/CryptoTalk">Crypto</a></li>
                                     </ul></li>
-                                <li class="dropdown-submenu"> <a href="#">FashPro..</a>
+                                <li role="separator" class="divider"></li>
+                                <li class="dropdown-submenu"> <a href="#">FashPro</a>
                                     <ul class="dropdown-menu">
-                                        <li><a href="https://9neinsg.github.io/NineNein/B-Topic/GreyingError/Code/FashCode">FashCode</a></li>
-                                        <li><a href="https://9neinsg.github.io/NineNein/B-Topic/GreyingError/Graphic/FashPhoto">FashPhoto</a></li>
-                                        <li><a href="https://9neinsg.github.io/NineNein/B-Topic/GreyingError/Audio/FashAlong">FashAlong</a></li>
+                                        <li role="separator" class="divider2 tc"></li>
+                                        <li class="tc"><span class="tc">How-To</span></li>
+                                        <li role="separator" class="divider2 tc"></li>
+                                        <li role="separator" class="divider"></li>
+                                        <li class="icon9add icon9-link tc"><a href="https://9neinsg.github.io/NineNein/B-Topic/GreyingError/Code/FashCode">FashCode</a></li>
+                                        <li class="icon9add icon9-picture tc"><a href="https://9neinsg.github.io/NineNein/B-Topic/GreyingError/Graphic/FashPhoto">FashPhoto</a></li>
+                                        <li class="icon9add icon9-music tc"><a href="https://9neinsg.github.io/NineNein/B-Topic/GreyingError/Audio/FashAlong">FashAlong</a></li>
                                     </ul></li>
-                                <li class="dropdown-submenu"> <a href="#">LNST..</a>
+                                <li role="separator" class="divider"></li>
+                                <li class="dropdown-submenu"> <a href="#">LNST</a>
                                     <ul class="dropdown-menu">
-                                        <li><a href="https://9neinsg.github.io/NineNein/B-Topic/GreyingError/LNST/Synopsis">Synopsis</a></li>
-                                        <li><a href="https://9neinsg.github.io/NineNein/B-Topic/GreyingError/LNST/Race">Race</a></li>
-                                        <li><a href="https://9neinsg.github.io/NineNein/B-Topic/GreyingError/LNST/Religion">Religion</a></li>
-                                        <li><a href="https://9neinsg.github.io/NineNein/B-Topic/GreyingError/LNST/Shield">Shield</a></li>
-                                        <li><a href="https://9neinsg.github.io/NineNein/B-Topic/GreyingError/LNST/TimeLine">TimeLine</a></li>
-                                        <li><a href="https://9neinsg.github.io/NineNein/B-Topic/GreyingError/LNST/TriForce">TriForce</a></li>
-                                        <li><a href="https://9neinsg.github.io/NineNein/blog">Blog</a></li>
-                                        <li><a href="https://9neinsg.github.io/NineNein/shop">Shop</a></li>
+                                        <li role="separator" class="divider2 tc"></li>
+                                        <li class="tc"><span class="tc">Theory</span></li>
+                                        <li role="separator" class="divider2 tc"></li>
+                                        <li role="separator" class="divider"></li>
+                                        <li class="icon9add icon9-zelda tc"><a href="https://9neinsg.github.io/NineNein/B-Topic/GreyingError/LNST/Synopsis">Intro</a></li>
+                                        <li class="icon9add icon9-zelda tc"><a href="https://9neinsg.github.io/NineNein/B-Topic/GreyingError/LNST/Race">Race</a></li>
+                                        <li class="icon9add icon9-zelda tc"><a href="https://9neinsg.github.io/NineNein/B-Topic/GreyingError/LNST/Religion">Faith</a></li>
+                                        <li class="icon9add icon9-zelda tc"><a href="https://9neinsg.github.io/NineNein/B-Topic/GreyingError/LNST/Shield">Item</a></li>
+                                        <li class="icon9add icon9-zelda tc"><a href="https://9neinsg.github.io/NineNein/B-Topic/GreyingError/LNST/TimeLine">Time</a></li>
+                                        <li class="icon9add icon9-zelda tc"><a href="https://9neinsg.github.io/NineNein/B-Topic/GreyingError/LNST/TriForce">Rune</a></li>
+                                        <li role="separator" class="divider"></li>
                                     </ul></li>
                                 </ul></li></form>
                     <form class="tc">
                         <li class="dropdown-submenu">
-                            <li role="separator" class="divider"></li> <a tabindex="-1" href="https://9neinsg.github.io/B-Topic/FaqBlog">FAQ</a>
+                            <li role="separator" class="divider"></li> 
+                            <span class="icon9add icon9-info-sign tc"><a tabindex="-1" href="https://9neinsg.github.io/NineNein/B-Topic/FaqBlog">FAQ</a></span>
                             <li role="separator" class="divider"></li>
+                            <li class="icon9add icon9-pencil tc"><a href="https://9neinsg.github.io/NineNein/blog">Blog</a></li>
+                            <li class="icon9add icon9-pencil tc"><a href="https://9neinsg.github.io/NineNein/shop">Shop</a></li>
                         </li></form>
                     </ul></ul>
 
@@ -69,24 +92,24 @@
             </div></ul>
 
         <ul class="nav navbar-nav navbar-left">
-            <li>
+            <li class="tc">
                 <div type="" class="btn btn-default" style="margin:7px">9-Online</div>
             </li></ul>
         <ul class="nav navbar-nav navbar-right">
-            <li class="dropdown">
+            <li class="dropdown tc">
                 <div class="btn btn-shoppe" style="margin:7px" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> <span>
                     <svg fill="#999999" width="18px" height="18px" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M12 0C5.365 0 0 5.373 0 12.015c0 1.335.228 2.607.618 3.81h3.577V5.729L12 13.545l7.805-7.815v10.095h3.577c.389-1.203.618-2.475.618-3.81C24 5.375 18.635 0 12 0zm-1.788 15.307l-3.417-3.421v6.351H1.758C3.87 21.689 7.678 24 12 24s8.162-2.311 10.245-5.764h-5.04v-6.351l-3.386 3.421-1.788 1.79-1.814-1.79h-.005z"/></svg></span></div>
                 <ul class="dropdown-menu" aria-labelledby="about">
                     <li></li>
-                    <li><a href="" target="_blank">Promos</a></li>
-                    <li><a href="" target="_blank">PowerLevel</a></li>
-                    <li><a href="" target="_blank">Shop</a></li>
-                    <li><a href="" target="_blank">Contrib</a></li>
-                    <li><a href="https://9neinsg.github.io/NineNein/B-Topic/NatSoc/saints" target="_blank">Saints</a></li>
+                    <li class="tc"><a href="" target="_blank">Promos</a></li>
+                    <li class="tc"><a href="" target="_blank">PowerLevel</a></li>
+                    <li class="tc"><a href="" target="_blank">Shop</a></li>
+                    <li class="tc"><a href="" target="_blank">Contrib</a></li>
+                    <li class="tc"><a href="https://9neinsg.github.io/NineNein/B-Topic/NatSoc/saints" target="_blank">Saints</a></li>
                 </ul></li></ul>
 
         <ul class="nav navbar-nav navbar-right">
-            <li>
+            <li class="tc">
                 <div class="btn-SocialNavSwitch"> <span>
                     <svg height="18" width="18" xmlns="http://www.w3.org/2000/svg" version="1.1" viewBox="0 0 1024 1024" class="icon">
                         <path fill="#999999" d="M767.99994 585.142857q75.995429 0 129.462857 53.394286t53.394286 129.462857-53.394286 129.462857-129.462857 53.394286-129.462857-53.394286-53.394286-129.462857q0-6.875429 1.170286-19.456l-205.677714-102.838857q-52.589714 49.152-124.562286 49.152-75.995429 0-129.462857-53.394286t-53.394286-129.462857 53.394286-129.462857 129.462857-53.394286q71.972571 0 124.562286 49.152l205.677714-102.838857q-1.170286-12.580571-1.170286-19.456 0-75.995429 53.394286-129.462857t129.462857-53.394286 129.462857 53.394286 53.394286 129.462857-53.394286 129.462857-129.462857 53.394286q-71.972571 0-124.562286-49.152l-205.677714 102.838857q1.170286 12.580571 1.170286 19.456t-1.170286 19.456l205.677714 102.838857q52.589714-49.152 124.562286-49.152z"></path></svg></span>
