--- a/Frame/Layout/1_Navigation/mainnav.html
+++ b/Frame/Layout/1_Navigation/mainnav.html
@@ -35,6 +35,7 @@
                                 <li role="separator" class="divider"></li>
                                 <li class="dropdown-submenu"> <a href="#">Tech</a>
                                     <ul class="dropdown-menu">
+                                        <li role="separator" class="divider2 tc"></li>
                                         <li class="tc"><span class="tc">Recs</span></li>
                                         <li role="separator" class="divider2 tc"></li>
                                         <li role="separator" class="divider"></li>
@@ -66,7 +67,7 @@
                                         <li class="icon9add icon9-zelda tc"><a href="https://9neinsg.github.io/NineNein/B-Topic/GreyingError/LNST/Shield">Item</a></li>
                                         <li class="icon9add icon9-zelda tc"><a href="https://9neinsg.github.io/NineNein/B-Topic/GreyingError/LNST/TimeLine">Time</a></li>
                                         <li class="icon9add icon9-zelda tc"><a href="https://9neinsg.github.io/NineNein/B-Topic/GreyingError/LNST/TriForce">Rune</a></li>
-                                        <li role="separator" class="divider"></li>
+                                        <li role="separator" class="divider2"></li>
                                     </ul></li>
                                 </ul></li></form>
                     <form class="tc">
