--- a/Frame/Layout/3_Content/cBooks/bookdes.html
+++ b/Frame/Layout/3_Content/cBooks/bookdes.html
@@ -19,7 +19,7 @@
 		<a href="#section3" onclick="keepLocation(window.pageYOffset);" class="arrow__btn ">›</a></section>
     <section id="section3"> 
 	  	<a href="#section2" onclick="keepLocation(window.pageYOffset);" class="arrow__btn">‹</a>
-			<div class="item bd-ATR" target="popup" onclick="window.open('../../Import/DL/Books/Kaczynski_Anti-Tech_Rev_WH.pdf#toolbar=1&navpanes=1&scrollbar=0','popup','width=600,height=600'); return false;"></div> 
+			<div class="item bd-ATR" target="popup" onclick="window.open('../../Import/DL/Books/Kaczynski_Anti-Tech_Rev_WH.pdf#toolbar=1&amp;navpanes=1&amp;scrollbar=0','popup','width=600,height=600'); return false;"></div> 
 			<div class="item bd-TJRS" target="popup" onclick="window.open('../../Import/DL/Books/Jones_Jew_Rev_Spirit.pdf','popup','width=600,height=600'); return false;"></div>    
 			<div class="item bd-JMS" target="popup" onclick="window.open('../../Import/DL/Books/Siege-James_Mason.pdf','popup','width=600,height=600'); return false;"></div>  
 			<div class="item bd-WBRW" target="popup" onclick="window.open('../../Import/DL/Books/Where-Black-Rules-White.pdf','popup','width=600,height=600'); return false;"></div>    
